demo/canary-istio/canary-preview-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: canary-demo-preview
    app.kubernetes.io/component: canary-demo-preview
    app.kubernetes.io/instance: canary-demo-preview
  name: canary-demo-preview
spec:
  host: 
  port:
    targetPort: http
  to:
    kind: Service
    name: canary-demo-preview
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
